SimpleDeployement/Skate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skate-deploy
  labels:
    app: skate
spec:
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      app: skate
  template:
    metadata:
      labels:
        app: skate
    spec:
      containers:
        - name: web
          image: prachiii123/skate:1.0  
          ports:
            - containerPort: 80
          resources:
            requests: 
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: skate-svc
spec:
  type: NodePort
  selector:
    app: skate
  ports:
    - port: 80
      targetPort: 80
